# mocap_interface

./: CMakeLists.txt  package.xml
config/: params.yaml
include/mocap_interface/: mocap_interface_component.hpp
launch/: mocap_interface.launch.py
src/: mocap_interface_component.cpp  mocap_interface_node.cpp
